--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -84,8 +84,8 @@
                     </div>
 
                     <div class="details-shop-innerdiv">
-                        <h5>Added By</h5>
-                        <h6 class="details-div-username">{{shop.user?shop.user:"N/A"}}</h6>
+                        <h5>Added By:</h5>
+                        <p class="card-text">{{shop.user?shop.user:"N/A"}}</p>
                     </div>
 
                     <!-- </div> -->
