--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,7 @@
+<app-sidebar></app-sidebar>
+
 <div>
-    <div>
+    <!-- <div>
         <nav class="navbar  navbar">
             <div class="brand-div">
                 <mat-icon>
@@ -32,162 +34,158 @@
                         </select>
                     </div>
 
-
-
-
                 </div>
 
-                <!-- <mat-icon title="Logout">
-                    <span class="logout-symbol-outlined" (click)="handleLogout()">
-                        logout
-                    </span>
-                </mat-icon> -->
             </div>
         </nav>
-    </div>
-
-    <div class="add-button-container">
-        <button type="button" class="btn btn-light btn-lg btn-block" (click)="handleAddShopClose()"
-            (click)="handleIsClosedInAdd()">
-            <mat-icon>
-                library_add
-            </mat-icon>
-            Add New Shop</button>
-    </div>
-
-    <div class="container">
-        <div *ngFor="let shop of fetchedData.results" class="card"
-            [ngStyle]="{ 'background-color': addNewShop || isClosed ? 'rgba(255, 255, 247, 0.5)' : ''}">
-            <div class="card-body">
-
-                <div class="image">
-                    <img src="http://127.0.0.1:8000{{shop.image}}" alt="" class="shop-icon"
-                        [ngStyle]="{ 'opacity': addNewShop || isClosed ? '0.4' : ''}">
-                </div>
-
-                <div class="details-div">
-                    <!-- <div class="details"> -->
-
-                    <div class="details-shop-innerdiv">
-                        <h5>Shop Name:</h5>
-                        <p class="card-text">{{shop.name}}</p>
-                    </div>
-
-                    <div class="details-shop-innerdiv">
-                        <h5>City:</h5>
-                        <p class="card-text">{{shop.city}}</p>
-                    </div>
-
-                    <div class="details-shop-innerdiv">
-                        <h5>Shop ID:</h5>
-                        <p class="card-text">{{shop.id}}</p>
-                    </div>
-
-                    <div class="details-shop-innerdiv">
-                        <h5>Added By:</h5>
-                        <p class="card-text">{{shop.user?shop.user:"N/A"}}</p>
-                    </div>
-
-                    <!-- </div> -->
-                </div>
-
-                <div class="view-more-div">
-                    <button type="button" class="btn btn-dark View-More-button" (click)="handleViewMoreComponent(shop)"
-                        (click)="handleViewMoreButton($event)">View Shop
-                        Details</button>
-                </div>
-
-            </div>
-            <!-- View more -->
-
-            <div *ngIf="isClosed">
-
-                <app-more-details-card [data]="singleShop"
-                    (handleIsClosed)="handleViewMoreButton($event)"></app-more-details-card>
-            </div>
-
-        </div>
-    </div>
-
-    <!-- Add new shop  -->
-
-    <div *ngIf="addNewShop">
-        <div class="addShop-card-container">
-
-            <div class="add-shop-icons-div">
-                <div class="add-shop-icon">
-                    <mat-icon>
-                        <span class="material-symbols-outlined" (click)="handleAddShopClose()">
-                            close
-                        </span>
-                    </mat-icon>
-                </div>
+    </div> -->
+    <div class="secondContainer">
 
 
-            </div>
-
-            <div class="addShop-file-input-container">
-
-                <input placeholder="" type="file" value="" class="addShop-file-input" name="image"
-                    (change)="handleImageInput($event)">
-
-            </div>
-
-            <div class="addShop-form1-container">
-                <form class="example-form">
-                    <div class="addShop-form-feild-container">
-                        <mat-form-field class="addShop-form-feild">
-                            <mat-label>Shop Name</mat-label>
-                            <input matInput placeholder="" value="" [(ngModel)]="formData.name" name="name">
-                        </mat-form-field>
-                    </div>
-
-                    <div class="addShop-form-feild-container">
-                        <mat-form-field class="addShop-form-feild">
-                            <mat-label>City</mat-label>
-                            <input matInput placeholder="" value="" [(ngModel)]="formData.city" name="city">
-                        </mat-form-field>
-                    </div>
-                </form>
-            </div>
-
-            <div class="view-more-form2-container">
-
-                <form class="addShop-form2">
-
-                    <div>
-                        <mat-form-field class="addShop-form2-feild">
-                            <mat-label>Address</mat-label>
-                            <input matInput placeholder="" value="" [(ngModel)]="formData.address" name="address">
-                        </mat-form-field>
-                    </div>
-
-                    <div>
-                        <mat-form-field class="addShop-form2-feild">
-                            <mat-label>Contact</mat-label>
-                            <input type="number" matInput placeholder="" value="" [(ngModel)]="formData.phone"
-                                name="phone">
-                        </mat-form-field>
-                    </div>
-                </form>
-
-            </div>
-
-            <div class="addShop-submit">
-                <div class="addShop-button">
-                    <button type="button" class="btn btn-dark" (click)="handleAddShopSubmit()">Add Shop</button>
-                </div>
-            </div>
-
+        <div class="add-button-container">
+            <button type="button" class="btn btn-light btn-lg btn-block" (click)="handleAddShopClose()"
+                (click)="handleIsClosedInAdd()">
+                <mat-icon>
+                    library_add
+                </mat-icon>
+                Add New Shop</button>
         </div>
 
+        <div class="container">
+            <div *ngFor="let shop of fetchedData.results" class="card"
+                [ngStyle]="{ 'background-color': addNewShop || isClosed ? 'rgba(255, 255, 247, 0.5)' : ''}">
+                <div class="card-body">
 
-    </div>
+                    <div class="image">
+                        <img src={{shop.image}} alt="" class="shop-icon"
+                            [ngStyle]="{ 'opacity': addNewShop || isClosed ? '0.4' : ''}">
+                    </div>
 
-    <div class="paginationButtons">
-        <button class="btn btn-dark pageButton" (click)="handlePaginationPrevious()">
-            << Prev.. Page</button>
-                <button class="btn btn-dark pageButton" (click)="handlePaginationNext()">Next Page >></button>
+                    <div class="details-div">
+                        <!-- <div class="details"> -->
+
+                        <div class="details-shop-innerdiv">
+                            <h5>Shop Name:</h5>
+                            <p class="card-text">{{shop.name}}</p>
+                        </div>
+
+                        <div class="details-shop-innerdiv">
+                            <h5>City:</h5>
+                            <p class="card-text">{{shop.city}}</p>
+                        </div>
+
+                        <div class="details-shop-innerdiv">
+                            <h5>Shop ID:</h5>
+                            <p class="card-text">{{shop.id}}</p>
+                        </div>
+
+                        <div class="details-shop-innerdiv">
+                            <h5>Added By:</h5>
+                            <p class="card-text">{{shop.user?shop.user:"N/A"}}</p>
+                        </div>
+
+                        <!-- </div> -->
+                    </div>
+
+                    <div class="view-more-div">
+                        <button type="button" class="btn btn-dark View-More-button"
+                            (click)="handleViewMoreComponent(shop)" (click)="handleViewMoreButton($event)">View Shop
+                            Details</button>
+                    </div>
+
+                </div>
+                <!-- View more -->
+
+                <div *ngIf="isClosed">
+
+                    <app-more-details-card [data]="singleShop"
+                        (handleIsClosed)="handleViewMoreButton($event)"></app-more-details-card>
+                </div>
+
+            </div>
+        </div>
+
+        <!-- Add new shop  -->
+
+        <div *ngIf="addNewShop">
+            <div class="addShop-card-container">
+
+                <div class="add-shop-icons-div">
+                    <div class="add-shop-icon">
+                        <mat-icon>
+                            <span class="material-symbols-outlined" (click)="handleAddShopClose()">
+                                close
+                            </span>
+                        </mat-icon>
+                    </div>
+
+
+                </div>
+
+                <div class="addShop-file-input-container">
+
+                    <input placeholder="" type="file" value="" class="addShop-file-input" name="image"
+                        (change)="handleImageInput($event)">
+
+                </div>
+
+                <div class="addShop-form1-container">
+                    <form class="example-form">
+                        <div class="addShop-form-feild-container">
+                            <mat-form-field class="addShop-form-feild">
+                                <mat-label>Shop Name</mat-label>
+                                <input matInput placeholder="" value="" [(ngModel)]="formData.name" name="name">
+                            </mat-form-field>
+                        </div>
+
+                        <div class="addShop-form-feild-container">
+                            <mat-form-field class="addShop-form-feild">
+                                <mat-label>City</mat-label>
+                                <input matInput placeholder="" value="" [(ngModel)]="formData.city" name="city">
+                            </mat-form-field>
+                        </div>
+                    </form>
+                </div>
+
+                <div class="view-more-form2-container">
+
+                    <form class="addShop-form2">
+
+                        <div>
+                            <mat-form-field class="addShop-form2-feild">
+                                <mat-label>Address</mat-label>
+                                <input matInput placeholder="" value="" [(ngModel)]="formData.address" name="address">
+                            </mat-form-field>
+                        </div>
+
+                        <div>
+                            <mat-form-field class="addShop-form2-feild">
+                                <mat-label>Phone</mat-label>
+                                <input type="number" matInput placeholder="" value="" [(ngModel)]="formData.phone"
+                                    name="phone">
+                            </mat-form-field>
+                        </div>
+                    </form>
+
+                </div>
+
+                <div class="addShop-submit">
+                    <div class="addShop-button">
+                        <button type="button" class="btn btn-dark" (click)="handleAddShopSubmit()">Add Shop</button>
+                    </div>
+                </div>
+
+            </div>
+
+
+        </div>
+
+        <div class="paginationButtons">
+            <button class="btn btn-dark pageButton" (click)="handlePaginationPrevious()">
+                << Prev.. Page</button>
+                    <button class="btn btn-dark pageButton" (click)="handlePaginationNext()">Next Page >></button>
+        </div>
+
     </div>
 
 </div>
