--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,191 +1,15 @@
-<app-sidebar></app-sidebar>
-
-<div>
-    <!-- <div>
-        <nav class="navbar  navbar">
-            <div class="brand-div">
-                <mat-icon>
-                    <span class="material-symbols-outlined">
-                        storefront
-                    </span>
-                </mat-icon>
-
-                <span class="navbar-brand mb-0 ml-5 h1">Shop Manager</span>
-            </div>
-
-            <div class="logout-symbol-div">
-
-                <div class="navbar-profile-div">
-                    <div>
-                        <mat-icon>
-                            <span class="material-symbols-outlined">
-                                account_circle
-                            </span>
-                        </mat-icon>
-                    </div>
-                    <div>
-                        <h6>{{username}}</h6>
-                    </div>
-
-                    <div>
-                        <select name="" id="" class="logout-select" (change)="handleLogout()">
-                            <option value=""></option>
-                            <option value="logout" class="logout-option">Logout</option>
-                        </select>
-                    </div>
-
-                </div>
-
-            </div>
-        </nav>
-    </div> -->
-    <div class="secondContainer">
-
-
-        <div class="add-button-container">
-            <button type="button" class="btn btn-light btn-lg btn-block" (click)="handleAddShopClose()"
-                (click)="handleIsClosedInAdd()">
-                <mat-icon>
-                    library_add
-                </mat-icon>
-                Add New Shop</button>
-        </div>
-
-        <div class="container">
-            <div *ngFor="let shop of fetchedData.results" class="card"
-                [ngStyle]="{ 'background-color': addNewShop || isClosed ? 'rgba(255, 255, 247, 0.5)' : ''}">
-                <div class="card-body">
-
-                    <div class="image">
-                        <img src={{shop.image}} alt="" class="shop-icon"
-                            [ngStyle]="{ 'opacity': addNewShop || isClosed ? '0.4' : ''}">
-                    </div>
-
-                    <div class="details-div">
-                        <!-- <div class="details"> -->
-
-                        <div class="details-shop-innerdiv">
-                            <h5>Shop Name:</h5>
-                            <p class="card-text">{{shop.name}}</p>
-                        </div>
-
-                        <div class="details-shop-innerdiv">
-                            <h5>City:</h5>
-                            <p class="card-text">{{shop.city}}</p>
-                        </div>
-
-                        <div class="details-shop-innerdiv">
-                            <h5>Shop ID:</h5>
-                            <p class="card-text">{{shop.id}}</p>
-                        </div>
-
-                        <div class="details-shop-innerdiv">
-                            <h5>Added By:</h5>
-                            <p class="card-text">{{shop.user?shop.user:"N/A"}}</p>
-                        </div>
-
-                        <!-- </div> -->
-                    </div>
-
-                    <div class="view-more-div">
-                        <button type="button" class="btn btn-dark View-More-button"
-                            (click)="handleViewMoreComponent(shop)" (click)="handleViewMoreButton($event)">View Shop
-                            Details</button>
-                    </div>
-
-                </div>
-                <!-- View more -->
-
-                <div *ngIf="isClosed">
-
-                    <app-more-details-card [data]="singleShop"
-                        (handleIsClosed)="handleViewMoreButton($event)"></app-more-details-card>
-                </div>
-
-            </div>
-        </div>
-
-        <!-- Add new shop  -->
-
-        <div *ngIf="addNewShop">
-            <div class="addShop-card-container">
-
-                <div class="add-shop-icons-div">
-                    <div class="add-shop-icon">
-                        <mat-icon>
-                            <span class="material-symbols-outlined" (click)="handleAddShopClose()">
-                                close
-                            </span>
-                        </mat-icon>
-                    </div>
-
-
-                </div>
-
-                <div class="addShop-file-input-container">
-
-                    <input placeholder="" type="file" value="" class="addShop-file-input" name="image"
-                        (change)="handleImageInput($event)">
-
-                </div>
-
-                <div class="addShop-form1-container">
-                    <form class="example-form">
-                        <div class="addShop-form-feild-container">
-                            <mat-form-field class="addShop-form-feild">
-                                <mat-label>Shop Name</mat-label>
-                                <input matInput placeholder="" value="" [(ngModel)]="formData.name" name="name">
-                            </mat-form-field>
-                        </div>
-
-                        <div class="addShop-form-feild-container">
-                            <mat-form-field class="addShop-form-feild">
-                                <mat-label>City</mat-label>
-                                <input matInput placeholder="" value="" [(ngModel)]="formData.city" name="city">
-                            </mat-form-field>
-                        </div>
-                    </form>
-                </div>
-
-                <div class="view-more-form2-container">
-
-                    <form class="addShop-form2">
-
-                        <div>
-                            <mat-form-field class="addShop-form2-feild">
-                                <mat-label>Address</mat-label>
-                                <input matInput placeholder="" value="" [(ngModel)]="formData.address" name="address">
-                            </mat-form-field>
-                        </div>
-
-                        <div>
-                            <mat-form-field class="addShop-form2-feild">
-                                <mat-label>Phone</mat-label>
-                                <input type="number" matInput placeholder="" value="" [(ngModel)]="formData.phone"
-                                    name="phone">
-                            </mat-form-field>
-                        </div>
-                    </form>
-
-                </div>
-
-                <div class="addShop-submit">
-                    <div class="addShop-button">
-                        <button type="button" class="btn btn-dark" (click)="handleAddShopSubmit()">Add Shop</button>
-                    </div>
-                </div>
-
-            </div>
-
-
-        </div>
-
-        <div class="paginationButtons">
-            <button class="btn btn-dark pageButton" (click)="handlePaginationPrevious()">
-                << Prev.. Page</button>
-                    <button class="btn btn-dark pageButton" (click)="handlePaginationNext()">Next Page >></button>
-        </div>
-
+<div class="parentContainer">
+    <div class="navbar-container">
+     <app-navbar></app-navbar>
     </div>
+    <div class="firstContainer">
+        <app-sidebar></app-sidebar>
+    </div>
+
+    <div class="dashboard-home-container">
+        <app-dashboard></app-dashboard>
+    </div>
+     
+    
 
 </div>
