--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,15 +1,29 @@
 <div class="sidebar">
-    <ul>
-        <div>
-            <li><a href="">Home</a></li>
+
+    <div class="">
+        <div class="sidebar-logo">
+            <div class="brand-div">
+                <mat-icon>
+                    <span class="material-symbols-outlined">
+                        storefront
+                    </span>
+                </mat-icon>
+
+                <span class="navbar-brand mb-0 ml-5 h1">Shop Manager</span>
+            </div>
+
         </div>
-        <div>
-            <li><a href="">Shop List</a></li>
+
+        <div class="list-div">
+            <div class="menu-items">
+                <a href="/home">Home</a>
+            </div>
+            <div class="menu-items">
+                <a href="/shop-list">Shop List</a>
+            </div>
+            <div class="menu-items">
+                <a href="/support">Support</a>
+            </div>
         </div>
-        <div>
-            <li><a href="">Support</a></li>
-        </div>
-     
-    </ul>
- </div>
-  
+
+    </div>
