--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,312 +1,16 @@
-
-.container {
+.parentContainer{
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    
 }
-
-.card {
-    width: 100vw;
-    // background-color: #03A9F4;
-    // background-color: #FFFFF7 ;
-    min-width: 390px;
-    border: 1px solid black;
-    border-radius: 0;
-    
+.navbar-container{
+    position: fixed;
+    z-index: -1;
 }
-.card-body{
-    display: grid;
-    justify-content: space-between;
-    grid-template-columns: 1fr 3fr;
-    align-items: center;
-    
-}
-.details-div{
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: 20px;
-    justify-content: space-between;
-    width: auto;
-    align-items: center;
-}
-
-.card-text{
-    margin-top: 0;
-    margin-bottom: 10px;
-    font-size: large;
-}
-
-.shop-icon{
+.dashboard-home-container{
     width: 100%;
-    aspect-ratio: 1/1;
-    margin: 10px;
-    object-fit: cover;
-    
-}
-.btn{
-display: flex;
-align-items: flex-end;
-}
-
-.details{
     display: flex;
-    flex-direction: column;
-    justify-content:center ;
-    margin-left: 20px;
-    align-items: flex-start;
-    
-}
-
-.details-shop-innerdiv{
-    display: flex;
-    flex-direction: column;
-}
-
-.navbar{
-    position: sticky;
-}
-.add-button-container{
-    height: 100px;
-    display: flex;
-    flex-direction: column;
-    padding: 30px;
-    margin-right: 50px;
-    align-items: flex-end;
-    margin-top: 3vw;
-  .btn{
-      display: flex;
-      justify-content: flex-end;
-  }
+    justify-content: center;
+    z-index: -10;
+    margin-left: auto;
+    margin-right: auto;
    
 }
-.brand-div{
-    display: flex;
-    align-items: center;
-    margin-left: 20px;
-    
-}
-
-.logout-symbol-div{
-    margin-right: 30px;
-    justify-content: space-around;
-    align-items: center;
-    width: 150px;
-    display: flex;
-}
-.navbar-brand{
-    margin-left: 5px;
-}
-
-
-
-.view-more-card-container {
-    display: grid;
-    grid-template-columns: auto auto;
-    position: fixed; 
-    top: 50%; 
-    left: 50%; 
-    transform: translate(-50%, -50%); 
-    width: 30vw;
-    min-width: 380px;
-    aspect-ratio: 1/1;
-    background-color: #FFFFF7;
-    border-radius: 10px;
-    z-index: 9999; 
-}
-
-
-.view-more-shop-image{
-    width:150px;
-    aspect-ratio: 1/1;
-    
-    
-}
-
-
-.view-more-form1-container{
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
-    
-}
-
-.view-more-form2-container{
-    display: flex;
-    justify-content: center;
-    grid-column-start: 1;
-    grid-column-end: 3;
-    
-   
- 
-}
-
-.form-group-2{
-   color: #FFFFF7;
-   margin-left: 30px;
-   display: flex;
-   justify-content: center;
-   margin-top: 10px;
-}
-
-.example-full-width-form2{
-    width: 25vw;
-    min-width: 240px;
-}
-.example-form2{
-    margin-top: 10px;
-}
-.view-more-icons{
-    grid-column-start: 1;
-    grid-column-end: 3;
-    padding: 10px;
-    display: flex;
-    justify-content: space-between;
-}
-
-.view-more-submit{
-    width: 100%;
-    grid-column-start: 1;
-    grid-column-end: 3;
-    display: flex;
-    justify-content: center;
-    padding: 10px;
-}
-
-
-
-
-.addShop-card-container {
-    display: grid;
-    grid-template-columns: auto auto;
-    position: fixed; 
-    top: 50%; 
-    left: 50%; 
-    transform: translate(-50%, -50%); 
-    width: 40vw;
-    min-width: 380px;
-    aspect-ratio: 1/1;
-    background-color: #FFFFF7;
-    border-radius: 10px;
-    z-index: 9999; 
-    padding: 10px;
-}
-.addShop-file-input{
-    width: 150px;
-    
-}
-.addShop-file-input-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 2px solid black;
-    border-style: dashed;
-    margin-left: 10px;
-    margin-bottom: 10px;
-}
-
-.addShop-form1-container{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-}
-
-.addShop-form-feild{
-    width: 80%;
-}
-.addShop-form-feild-container{
-    display: flex;
-    justify-content: center ;
-}
-.addShop-form2-feild{
-    width: 34vw;
-    min-width: 310px;
-}
-.add-shop-icon{
-    display: flex;
-    
-    justify-content: center;
-}
-
-.add-shop-icons-div{
-    grid-column-start: 1;
-    grid-column-end: 3;
-    padding: 10px;
-    display: flex;
-    justify-content: flex-end;
-}
-
-.addShop-submit{
-    grid-column-start: 1;
-    grid-column-end: 3;
-    display: grid;
-    justify-content: center;
-  
-}
-.View-More-button{
-width: 155px;
-}
-
-.view-more-div{
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    margin: 10px;
-}
-
-.image{
-    width: 160px;
-}
-.shop-icon{
-    object-fit: cover;
-}
-
-.paginationButtons {
-    display: flex;
-    justify-content: flex-end;
-    position: relative;
-    bottom: 0;
-    right: 0;
-    padding: 20px;
-    margin: 20px;
-}
-
-.pageButton{
-    margin-right: 20px;
-}
-.navbar {
-    // position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 1000; 
-    background-color: #f8f9fa; 
-}
-
-.no-spinners::-webkit-inner-spin-button,
-.no-spinners::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-}
-.details-div-username{
-    font-size: 13px;
-}
-.navbar-profile-div{
-    display: flex;
-    justify-content: center;
-    align-items:center;
-    margin: 10px;
-    
-}
-
-.logout-select{
-    width: 20px;
-    border: none;
-}
-
-  
-  
-
-
-
-
