--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -1,5 +1,35 @@
 .sidebar{
     width: 250px;
-    background-color: azure;
+    background-color: whitesmoke;
+    position: fixed;
     height: 100vh;
+    box-shadow: 5px 0px 5px rgba(0, 0, 0, 0.1);
+}
+
+.menu-items{
+    height: 50px;
+    background-color: #FFFF;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
+}
+.list-div{
+    padding: 20px;
+    margin-top: 50px;
+}
+.sidebar-logo .brand-div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    
+}
+a{
+    text-decoration: none;
+}
+.navbar-brand{
+    font-size: 25px;
+    
 }
