--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,3 +1,6 @@
 <div class="navbar-container">
-
+   <div class="profile-div">
+    <img src="{{baseUrl}}{{activeUser.image}}" alt="" class="profile-avatar">
+    <p>{{activeUser.username}}</p>
+   </div>
 </div>
