--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -1,6 +1,6 @@
 .sidebar{
     width: 250px;
-    background-color: whitesmoke;
+    background-color: white;
     position: fixed;
     height: 100vh;
     box-shadow: 5px 0px 5px rgba(0, 0, 0, 0.1);
@@ -8,7 +8,7 @@
 
 .menu-items{
     height: 50px;
-    background-color: #FFFF;
+    background-color: whitesmoke;
     border-radius: 5px;
     display: flex;
     justify-content: center;
