--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,9 +37,9 @@ $client-theme: mat.define-light-theme((
 
 
 
-// body{
-//     background-color: #9e9d9c;
-// }
+body{
+    background-color: whitesmoke;
+}
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
