--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,24 +1,27 @@
 <div class="dashboard-container">
     <table class="mapping-table">
         <tr>
-            <th style="width:10%;">Image</th>
+            <th style="width: 10%; height: 40px;">Image</th>
             <th style="width:10%;">Shop Id</th>
             <th style="width:15%;">Shop Name</th>
             <th style="width:15%;">City</th>
             <th style="width:20%;">Address</th>
             <th style="width:15%;">Phone</th>
-            <th style="width:10%;"></th>
+            <th style="width:15%;"></th>
 
         </tr>
         
-        <tr *ngFor="let shop in fetchedData.results">
+        <tr *ngFor="let shop of fetchedData.results" >
+            <td><img class="table-shop-image" src={{shop.image}} alt=""></td>
+            <td>{{shop.id}}</td>
             <td>{{shop.name}}</td>
-            <td>John</td>
-            <td>First Name</td>
-            <td>John</td>
-            <td>First Name</td>
-            <td>John</td>
+            <td>{{shop.city}}</td>
+            <td>{{shop.address}}</td>
+            <td>{{shop.phone}}</td>
+            <td><button type="button" class="btn btn-secondary">View More</button></td>
         </tr>
         <!-- Add more rows as needed -->
     </table>
+
+    
 </div>
