--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,26 +1,55 @@
-<div class="container">
+<div class="shadow-lg container">
     <h1 class="form-heading">Sign Up</h1>
+
+
+
     <form #signInForm="ngForm" (ngSubmit)="submitForm(signInForm)">
+
+
+        <!-- <div class="profile-image"> -->
+            <div class="image-container">
+                <label class="hoverable" for="fileInput">
+                    <img [src]="url ? url : 'https://www.w3schools.com/howto/img_avatar.png'" />
+                    <div class="hover-text">Choose file</div>
+                    <div class="background"></div>
+                </label>
+                <br />
+                <input id="fileInput" type="file" [(ngModel)]="url" class="select-profile-picture"
+                    (change)="onSelectFile($event)" name="image"/>
+            </div>
+
+        <!-- </div> -->
+
         <div class="form-group">
             <label for="name">Username</label>
-            <input type="text" class="form-control" id="name" name="username" [(ngModel)]="formData.username" placeholder="Username">
+            <input type="text" class="form-control" id="name" name="username" [(ngModel)]="formData.username"
+                placeholder="Username">
         </div>
         <div class="form-group">
             <label for="email">Email address</label>
-            <input type="email" class="form-control" id="email" name="email" [(ngModel)]="formData.email" placeholder="Enter email">
+            <input type="email" class="form-control" id="email" name="email" [(ngModel)]="formData.email"
+                placeholder="Enter email">
         </div>
         <div class="form-group">
             <label for="phone">Contact</label>
-            <input type="text" class="form-control" id="phone" name="phone" [(ngModel)]="formData.phone" placeholder="Contact">
+            <input type="text" class="form-control" id="phone" name="phone" [(ngModel)]="formData.phone"
+                placeholder="Contact">
         </div>
+        
         <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" class="form-control" id="password" name="password" [(ngModel)]="formData.password" placeholder="Password">
+            <input type="password" class="form-control" id="password" name="password" [(ngModel)]="formData.password"
+                placeholder="Password">
+        </div>
+        <div class="form-group">
+            <label for="password">Confirm Password</label>
+            <input type="password" class="form-control" id="password" name="password"
+                [(ngModel)]="formData.confirmPassword" placeholder="Password">
         </div>
         <span>Already have an account? <a href="/login">Login</a></span>
 
         <div class="button">
-            <button type="submit" class="btn btn-primary" (click)="postMethod()">Submit</button>
+            <button type="submit" class="btn btn-primary" (click)="handleRegister()">Submit</button>
         </div>
     </form>
 </div>
