--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,29 +1,37 @@
 <div class="sidebar">
 
-    <div class="">
-        <div class="sidebar-logo">
-            <div class="brand-div">
+
+
+    <div class="list-div">
+        <div class="menu-items-div">
+            <div class="menu-items">
                 <mat-icon>
                     <span class="material-symbols-outlined">
-                        storefront
+                        home
                     </span>
                 </mat-icon>
-
-                <span class="navbar-brand mb-0 ml-5 h1">Shop Manager</span>
-            </div>
-
-        </div>
-
-        <div class="list-div">
-            <div class="menu-items">
                 <a href="/home">Home</a>
             </div>
+
             <div class="menu-items">
+                <mat-icon>
+                    <span class="material-symbols-outlined">
+                        format_list_bulleted
+                    </span>
+                </mat-icon>
                 <a href="/shop-list">Shop List</a>
             </div>
+
             <div class="menu-items">
+                <mat-icon>
+                    <span class="material-symbols-outlined">
+                        support_agent
+                    </span>
+                </mat-icon>
                 <a href="/support">Support</a>
             </div>
         </div>
 
     </div>
+
+</div>
