--- a/src/app/support/support.component.scss
+++ b/src/app/support/support.component.scss
@@ -2,8 +2,13 @@
     padding: 0;
 }
 
-.dashboard-div{
+
+.support-app-div{
     width: 100%;
     display: flex;
     justify-content: center;
+}
+
+.sidebar-app-div{
+    background-color: white;
 }
