--- a/src/app/view-more/view-more.component.html
+++ b/src/app/view-more/view-more.component.html
@@ -7,7 +7,7 @@
             <app-sidebar></app-sidebar>
         </div>
         <div class="d-flex dashboard-div">
-            <app-dashboard></app-dashboard>
+            <app-view-more></app-view-more>
         </div>
     </div>
 
