--- a/src/app/support-form/support-form.component.html
+++ b/src/app/support-form/support-form.component.html
@@ -75,7 +75,7 @@
 
 <div class="form-container">
   <div class="form">
-    <form>
+    <form class="support-form-div">
       <div class="form-heading-container">
         <h2 class="form-heading">Contact Us</h2>
       </div>
