--- a/src/app/support/support.component.scss
+++ b/src/app/support/support.component.scss
@@ -11,4 +11,12 @@
 
 .sidebar-app-div{
     background-color: white;
+    height: 100%;
+}
+
+.support-container{
+    height: 100%;
+}
+.second-div{
+    height: 100%;
 }
