--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,14 +2,22 @@
 
     <app-navbar class="navbar"></app-navbar>
 
-    <div class="d-flex">
-        <div>
+    <div class="d-flex home-second-cont">
+        <div class="home-second-div">
             <app-sidebar></app-sidebar>
         </div>
         <div class="d-flex dashboard-div">
-            <app-dashboard></app-dashboard>
+           
+                <div>
+                    <app-dashboard></app-dashboard>
+                </div>          
+            
+
         </div>
     </div>
+
+
+
 
 
 </div>
