--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -6,4 +6,13 @@
     width: 100%;
     display: flex;
     justify-content: center;
+    height: 100%;
 }
+
+.home-container{
+    height: 100%;
+}
+.home-second-cont{
+    height: 100%;
+}
+
