--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,19 +1,30 @@
 <div class="navbar-container">
 
-   <div class="sidebar-logo">
-      <div class="brand-div">
-          <mat-icon>
-              <span class="material-symbols-outlined">
-                  storefront
-              </span>
-          </mat-icon>
+    <div class="sidebar-logo">
+        <div class="brand-div">
+            <mat-icon>
+                <span class="material-symbols-outlined">
+                    storefront
+                </span>
+            </mat-icon>
 
-          <span class="navbar-brand mb-0 ml-5 h1 ">Shop Manager</span>
-      </div>
-  </div>
+            <span class="navbar-brand mb-0 ml-5 h1 ">Shop Manager</span>
+        </div>
+    </div>
 
-   <div class="profile-div">
-      <p>{{activeUser.username | uppercase}}</p>
-    <img src="{{baseUrl}}{{activeUser.image}}" alt="" class="profile-avatar">
-   </div>
+    <div class="profile-div">
+        <p>{{activeUser.username | uppercase}}</p>
+        <img src="{{baseUrl}}{{activeUser.image}}" alt="" class="profile-avatar">
+        <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+            <mat-icon>more_vert</mat-icon>
+          </button>
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item (click)="handleLogout()">
+              <mat-icon>logout</mat-icon>
+              <span >Logout</span>
+            </button>
+           
+           
+          </mat-menu>
+    </div>
 </div>
