--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -1,7 +1,7 @@
 .sidebar{
     width: 250px;
     background-color: white;
-    height: 100vh;
+    height: 120%;
     box-shadow: 5px 0px 5px rgba(0, 0, 0, 0.1);
     color: #414a4c;
     top: 0;
