--- a/src/app/support-form/support-form.component.scss
+++ b/src/app/support-form/support-form.component.scss
@@ -1,7 +1,6 @@
 
 
 .form-container{
-    padding: 40px;
     width: 400px;
     display: flex;
     justify-content: center;
@@ -19,7 +18,7 @@
   }
 
 .form-heading{
-    
+    margin-top: 40px;
 }
 
 .form-heading-container{
@@ -29,16 +28,20 @@
 .form{
     margin-bottom: 6vh;
     display: flex;
+    justify-content: center;
+    width: 100%;
 }
 
 .form-control{
-    min-width: 300px;
+    width: 80%;
 }
 
+.support-form-div{
+    width: 100%;
+}
 
 @media screen and (max-width:768px) {
     .form-container{
-        padding: 20px;
         width: 260px;
         display: flex;
         justify-content: center;
