--- a/src/app/support/support.component.html
+++ b/src/app/support/support.component.html
@@ -4,7 +4,7 @@
         <app-navbar class="navbar"></app-navbar>
     </div>
 
-<div class="d-flex">
+<div class="d-flex second-div">
  
 
     <div class="sidebar-app-div">
